# android-ccache-example

./: .travis.yml  README.md  appveyor.yml  build.gradle
app/: build.gradle
app/src/androidTest/java/com/example/androidccacheexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  wrap-ccache.bat
app/src/main/java/com/example/androidccacheexample/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/androidccacheexample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
